# cookie

./: .gitignore  Dont-Worry-About-It.txt  FULL_SCHEDULE.txt  Qi.js  Seinfeld.js  SelectiveTranslator.js  South_Park.js  Star_Trek_Deep_Space_Nine.js  Star_Trek_Original_Series.js  Star_Trek_The_Next_Generation.js  Stargate_Atlantis.js  Stargate_SG-1.js  Tim_And_Eric_Awesome_Show_Great_Job.js  Top_Gear.js  Whose_Line_Is_It_Anyway_1998.js  a word of caution.jpg-large  alarma.html  all_steam_links.py  allcheevos_nekokasumi.html  allcheevos_shaymus22.html  backup.sh  barrel_roll.htm  beeep.html  beef teem tank.txt  beep.py  bep.py  binarycolor.py  black.html  bluetooth_devices.js  calendar.js  calendar.py  calendar_view.html  calendar_viewer.py  changeIcon.vbs  cheevoList_nekokasumi_page1.html  cheevoList_nekokasumi_page2.html  cheevoList_nekokasumi_page3.html  cheevoList_nekokasumi_page4.html  cheevoList_nekokasumi_page5.html  cheevoList_nekokasumi_page6.html  (+129 more)
2023-03-10/: button_notifier.py  index.html  servers.py
AI/: demo.py
AI/chat/: README.md  pyproject.toml
AI/chat/src/: chat.py
AI/chat/src/ai_chat/: __init__.py  character.py  message.py  prompt.py
AI/chat/src/ai_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AI/chat/tests/: test_character.py  test_message.py  test_prompt.py
Audio/: package-lock.json  package.json  receiver.html
Clocks/: chimer.html  progress.html  timesplitter.html
Deciders/: gamepicker.html  ratingDB_shaymus22.js
Dinger/: dinger.py
GameCalendar/: GameCalendar.html
Genten/: docker-compose.yml  old.docker-compose.yml
Genten/backend/: CMakeLists.txt  Dockerfile  api_server.cpp  main.cpp  old.Dockerfile  package-lock.json  package.json  server.cpp  server.cpp.old  swagger.yaml  test.cpp
Genten/backend/apidoc/: index.html
Genten/backend/apidoc/assets/: main.bundle.js
Genten/backend/include/: CMakeCache.txt  Makefile  cmake_install.cmake  model_viewer
Lua/: sandbox.lua
Retro/: Arcade.html  N64.html  SNES.html
Scrape/: scrape.py
Sun/: sun_pos.py  sun_vis.py
Super Mario Maker/: blox.html
Video/: config.json  main.cpp
bip/: bip.html
bona/: app.js  app.test.js  package-lock.json  package.json  swagger.yaml
countdowns/: countdowns.html  countdowns_adventure_time.jpg~  countdowns_archer.jpg~  countdowns_arkham_knight.jpg~  countdowns_attack_on_titan.jpg~  countdowns_batman_v_superman.jpg~  countdowns_birthday.jpg~  countdowns_bobs_burgers.jpg~  countdowns_bourne_5.jpg~  countdowns_captain_america.jpg~  countdowns_christmas.jpg~  countdowns_cinco_de_mayo.jpg~  countdowns_cod_blops_3.jpg~  countdowns_computer.gif~  countdowns_computer.jpg~  countdowns_dbs.jpg~  countdowns_dbz.jpg~  countdowns_deadpool.jpg~  countdowns_deus_ex_mankind_divided.jpg~  countdowns_doctor_who.jpg~  countdowns_doom.jpg~  countdowns_drone.jpg~  countdowns_fall.jpg~  countdowns_fallout4.jpg~  countdowns_finding_dory.jpg~  countdowns_flash.jpg~  countdowns_game_of_thrones.jpg~  countdowns_gods_of_egypt.jpg~  countdowns_guardians_of_the_galaxy.jpg~  countdowns_halo5.jpg~  (+38 more)
(+319 files in other folders)
