[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chat"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
keywords = ["prompt", "message", "character"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "flake8>=5.0"]
